# acdh-bible-pyutils

./: .coverage  .gitignore  README.md  pyproject.toml  test_bibl_uitls.py
.github/workflows/: pypi.yml  tests.yml
acdh_bible_pyutils/: __init__.py
src/acdh_bible_pyutils/: __init__.py
tests/: test.py
